--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
     }
   </style>
 </head>
-<body>
   <h1>Calendario Sala Estudios L'Eliana</h1>
   <div id="calendar"></div>
   <div id="legend">
@@ -73,6 +72,8 @@
       <span class="legend-color" style="background: blue;"></span> Horario #3
     </div>
   </div>
+  <p>Visita nuestra <a href="https://www.leliana.es/es/pagina/somos-biblioteca" target="_blank">página principal</a> para más información.</p>
+  <img src="src/img/bib.jpeg" alt="Probando" width="700" height="500">
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
