Nº de filas reducido

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     /*CADA ÍTEM DE LA LEYENDA*/
     .legend-item {
       margin: 5px 0;
+      max-width: 1000px;
     }
     /*COLORES DE LA LEYENDA*/
     .legend-color {
